--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
 <div class="container">
     <h1>📈 Notowania Giełdowe Półświatka</h1>
-    <p style="text-align: center; color: #888; margin-bottom: 30px;">Aktualne ceny rynkowe (Update: Live / Symulacja nieobecności)</p>
+    <p style="text-align: center; color: #888; margin-bottom: 30px;">Aktualne ceny rynkowe w RP (Update: Live / Symulacja nieobecności / jest to tylko pod RP)</p>
 
     <div class="chart-container">
         <canvas id="marketChart"></canvas>
@@ -180,7 +180,7 @@
     <div class="market-grid" id="cards-container">
         </div>
 
-    <button class="login-btn" onclick="toggleAdmin()">Panel Szefa</button>
+    <button class="login-btn" onclick="toggleAdmin()">Panel opiekuna</button>
 
     <div id="admin-panel">
         <h2 style="color: var(--accent-red);">⚠️ Panel Zarządzania Cenami</h2>
@@ -199,14 +199,14 @@
 
     // --- DOMYŚLNE PRODUKTY (fallback) ---
     const defaultProducts = [
-        { id: 'marihuana', name: '🌿 Marihuana', unit: '1 paczka (10g)', price: 850, prevPrice: 850, desc: 'Standard RP, niski próg wejścia.' },
-        { id: 'haze', name: '🌿 Silver Haze', unit: '1 paczka (10g)', price: 1000, prevPrice: 1000, desc: 'Odmiana marihuany, droższa.' },
-        { id: 'hasz', name: '🟫 Hasz', unit: '1 porcja (10g)', price: 1400, prevPrice: 1400, desc: 'Mocniejszy produkt z konopii.' },
-        { id: 'koka', name: '❄️ Kokaina', unit: '1 porcja (15g)', price: 1100, prevPrice: 1100, desc: 'Wymagający sprzęt, średni risk.' },
-        { id: 'crack', name: '🪨 Crack', unit: '1 porcja (10g)', price: 1500, prevPrice: 1500, desc: 'Pochodna kokainy, wysokie ryzyko.' },
-        { id: 'heroina', name: '💉 Heroina', unit: '1 fiolka (5g)', price: 2000, prevPrice: 2000, desc: 'Laboratorium, średni/high risk.' },
-        { id: 'morfina', name: '💊 Morfina', unit: '1 fiolka (5g)', price: 1800, prevPrice: 1800, desc: 'Średnie ryzyko, wymaga aparatury.' },
-        { id: 'fentanyl', name: '☠️ Fentanyl', unit: '1 fiolka (2g)', price: 3500, prevPrice: 3500, desc: 'Najcięższa i ryzykowna substancja.' }
+        { id: 'marihuana', name: '🌿 Marihuana RP', unit: '1 paczka (10g)', price: 850, prevPrice: 850, desc: 'Standard RP, niski próg wejścia.' },
+        { id: 'haze', name: '🌿 Silver Haze RP', unit: '1 paczka (10g)', price: 1000, prevPrice: 1000, desc: 'Odmiana marihuany, droższa.' },
+        { id: 'hasz', name: '🟫 Hasz RP', unit: '1 porcja (10g)', price: 1400, prevPrice: 1400, desc: 'Mocniejszy produkt z konopii.' },
+        { id: 'koka', name: '❄️ Kokaina RP', unit: '1 porcja (15g)', price: 1100, prevPrice: 1100, desc: 'Wymagający sprzęt, średni risk.' },
+        { id: 'crack', name: '🪨 Crack RP', unit: '1 porcja (10g)', price: 1500, prevPrice: 1500, desc: 'Pochodna kokainy, wysokie ryzyko.' },
+        { id: 'heroina', name: '💉 Heroina RP', unit: '1 fiolka (5g)', price: 2000, prevPrice: 2000, desc: 'Laboratorium, średni/high risk.' },
+        { id: 'morfina', name: '💊 Morfina RP', unit: '1 fiolka (5g)', price: 1800, prevPrice: 1800, desc: 'Średnie ryzyko, wymaga aparatury.' },
+        { id: 'fentanyl', name: '☠️ Fentanyl RP', unit: '1 fiolka (2g)', price: 3500, prevPrice: 3500, desc: 'Najcięższa i ryzykowna substancja.' }
     ];
 
     // --- ŁADUJ DANE Z LocalStorage ---
@@ -385,7 +385,7 @@
             panel.style.display = 'none';
         } else {
             const password = prompt("Podaj kod dostępu szefa:");
-            if (password === "admin") {
+            if (password === "admin0107wrp") {
                 panel.style.display = 'block';
                 window.scrollTo(0, document.body.scrollHeight);
             } else {
